--- a/stylesheets/navbar.css
+++ b/stylesheets/navbar.css
@@ -2,17 +2,18 @@
 @import url("animate.css");
 
 .navbar {
-    position: fixed;
+    position: fixed !important;
     text-align: right;
-    bottom: 0;
+    bottom: 0 !important;
     right: 0;
-    padding: 20px 0 20px 5px;
+    padding: 5vh 0 3vh 5px;
     width: fit-content;
 }
 .navbar span {
     font-family: 'Prompt', 'Comic Sans MS';
     margin-left: -5px;
-    padding: 20px 50px 20px 50px;
+    height: 10vh;
+    padding: 3.5vh 50px 4vh 50px;
     width: 100px;
     color: #ffffff;
     opacity: 1.0;
