--- a/stylesheets/navbar.css
+++ b/stylesheets/navbar.css
@@ -5,7 +5,7 @@
     position: fixed !important;
     text-align: right;
     bottom: 0 !important;
-    right: 0;
+    right: 25px;
     padding: 5vh 0 3vh 5px;
     width: fit-content;
 }
@@ -37,5 +37,8 @@
 }
 .navbar .themes:hover img {
     transform: rotate(280deg);
+}
+.xNav {
+    padding-right: 20px;
 }
 
