Hobbies page finished, email form edited to look more Material Design-like

--- a/stylesheets/navbar.css
+++ b/stylesheets/navbar.css
@@ -6,7 +6,7 @@
     text-align: right;
     bottom: 0 !important;
     right: 25px;
-    padding: 5vh 0 3vh 5px;
+    padding: 5vh 25px 3vh 5px;
     width: fit-content;
 }
 .navbar span {
