--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -10,6 +10,7 @@
     padding: 0;
 }
 #body-one, #body-two, #body-four {
+    box-shadow: 3px 8px 50px 10px #151515;
     min-width: 150px;
     height: 90vh;          /*bootstrap to get screen height on load*/
     padding: 0;
@@ -24,13 +25,14 @@
     background: #3b4242 url('../images/background.jpg') no-repeat center top;
 }
 .box-name {
+
     font-family: 'Oswald';
     letter-spacing: 15px;           /* yay comments */
     text-align: center;
     margin: 0 auto;
     height: 400px;
     width: fit-content;
-    margin-top: 250px;
+    margin-top: 15vh;
 }
 
 .box-name h1 {
@@ -46,6 +48,7 @@
     font-size: 20px;
     opacity: 0.9;
 }
+
 
 .box-name h1 span {
     margin-left: 15px;
@@ -76,19 +79,37 @@ a {
     text-decoration: underline;
 }
 .box-form {
+    z-index: 3;
     padding: 1px 50px 1px 50px;
     margin: 0 auto;
     height: 530px;
-    margin-top: 160px;
+    margin-top: -90px;
     width: 50%;
     background-color: #708090;
     font-family: "Apple SD Gothic Neo";
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+.box-form:hover {
+    box-shadow: 0 44px 58px rgba(0,0,0,0.25), 0 40px 40px rgba(0,0,0,0.22);
+}
+.topStripe {
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+    z-index: 0;
+    width: 100%;
+    height: 25%;
+    background-color: #564c43;
 }
 .about-Slider {
     color: black;
     width: 90%;
     margin: 0 auto;
 }
+
+
+
+/*1st slide of carousel */
+
 #caro1 {
     height: 850px;
     width: 100%;
@@ -97,18 +118,36 @@ a {
     text-align: center;
 }
 #caro1 h1 {
-    margin-left: 500px;
-    margin-right: 500px;
+    width: 400px;
+    margin: 20px auto;
     padding: 25px 0 25px 0;
     background: rgba(103, 111, 104, 0.5);
 }
+#caro1 .left {
+    margin-left: 30px;
+    width: 45%;
+    float: left;
+    background: rgba(103, 111, 104, 0.5);
+}
+#caro1 .right {
+    margin-right: 30px;
+    width: 45%;
+    float: right;
+    background: rgba(103, 111, 104, 0.5);
+}
 #caro1 p {
-    border-radius: 24px;
-    background: rgba(103, 111, 104, 0.3);
-    padding: 0 50px 0 50px;
-    margin: 40px 150px 0 150px;
     line-height: 50px;
 }
+#caro1 article {
+    height: 75%;
+    margin-top: 70px;
+}
+
+
+
+/*carousel number 2*/
+
+
 #caro2 {
 
     background: black url(../images/carousel2.jpg) top left no-repeat;
@@ -116,10 +155,57 @@ a {
     height: 850px;
     width: 100%;
 }
+#caro2 h1 {
+    border-radius: 7px;
+    text-align: center;
+    width: 200px;
+    padding: 25px 0 25px 0;
+    background: rgba(204, 204, 204, 0.5);
+    margin: 20px auto;
+}
+#caro2 article {
+    height: 75%;
+}
+#leftCol {
+    margin-left: 40px;
+    height: 75%;
+    width: 45%;
+    float: left;
+}
+#rightCol {
+    margin-right: 40px;
+    height: fit-content;
+    float: right;
+    width: 45%;
+}
+div.circle {
+    text-align: center;
+    margin: auto;
+    width: 150px;
+    height: 150px;
+    background: rgba(204, 204, 204, 0.7);
+    margin-bottom: 50px;
+    border-radius: 100%;
+    border: rgba(204, 204, 204, 0.9) solid 4px;
+    transition-duration: .3s;
+}
+div.circle:hover {
+    box-shadow: inset 0 0 0 80px gold,
+    0 0 0 40px gold;
+}
+
+div.circle span {
+    display: block;
+    margin-top: 40px;
+}
+
+
 #caro3 {
     height: 850px;
     width: 100%;
     background: black url(../images/carousel3.jpg) top left no-repeat;
     background-size: 100%;
 }
+
+
 
