--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,18 +1,20 @@
 
 @import 'https://fonts.googleapis.com/css?family=Prompt';
 @import 'https://fonts.googleapis.com/css?family=Oswald';
+@import 'https://fonts.googleapis.com/css?family=Noto+Sans';
 
  #body
  {
-     height: 302.7vh;
+     height: auto;
     background-color: #3b4242;
     margin: 0;
     padding: 0;
 }
-#body-one, #body-two, #body-four {
-    box-shadow: 3px 8px 50px 10px #151515;
+#body-one, #body-two, #body-three, #body-four {
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
     min-width: 150px;
-    height: 90vh;          /*bootstrap to get screen height on load*/
+    height: 90vh;       /*    vh = screen height
+                                vw = screen width          */
     padding: 0;
     width: 100%;
 }
@@ -24,6 +26,22 @@
    top: 0;
     background: #3b4242 url('../images/background.jpg') no-repeat center top;
 }
+#body-two {
+    background-color: #676f68;
+    margin-top: 100px;
+    overflow: hidden;
+}
+#body-three {
+    margin-top: 100px;
+    background-color: #4c4d54;
+}
+#body-four {
+    background-color: #726659;
+    margin-top: 100px;
+    overflow: hidden;
+    margin-bottom: 100px;
+}
+
 .box-name {
 
     font-family: 'Oswald';
@@ -60,16 +78,6 @@
     background-position: center -260px;
 }
 
-#body-four {
-    background-color: #726659;
-    margin-top: 100px;
-    overflow: hidden;
-}
-#body-two {
-    background-color: #676f68;
-    margin-top: 100px;
-    overflow: hidden;
-}
 
 a {
     color: inherit;
@@ -206,6 +214,63 @@ div.circle span {
     background: black url(../images/carousel3.jpg) top left no-repeat;
     background-size: 100%;
 }
+
+.pictureStripe {
+    overflow: hidden;
+    width: 100%;
+    height: 25vh;
+    margin-top: 100px;
+    /*http://cdn.skilledup.com/wp-content/uploads/2014/11/online-portfolio-Feature_1290x688_MS-940x501.jpg*/
+}
+.pictureStripe img {
+    position: relative;
+    z-index: 0;
+}
+#buttonPort {
+    position: relative;
+        z-index: 1;
+        display: table;
+        font-family: 'Noto Sans';
+        font-weight: bold;
+        background-color: #0D47A1;
+        color: white;
+        padding: 20px 10px;
+        padding-bottom: 0;
+        border-radius: 4px;
+        box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+        margin: 0 auto;
+        margin-top: -35px;
+    text-align: center;
+}
+#buttonPort:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+#portfolioContainer {
+    overflow: hidden;
+    align-content: flex-start;
+    background-color: #0D87A1;
+    width: 50px;
+    height: 10px;
+    margin: 0 auto;
+    display: none;
+    transition-duration: 2s;
+    margin-top: 40px;
+    border-radius: 15px;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+.itemBox {
+    height: 80%;
+    width: 100px;
+    background-color: #0c2f67;
+    margin: 30px;
+    margin-left: 20px;
+    justify-content: space-around;
+    flex-grow: 1;
+    border-radius: 20px;
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
+
+
 
 
 
