--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -259,6 +259,7 @@ div.circle span {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 .itemBox {
+    text-align: center;
     height: 80%;
     width: 100px;
     background-color: #0c2f67;
@@ -268,6 +269,13 @@ div.circle span {
     flex-grow: 1;
     border-radius: 20px;
     box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
+.proLink {
+    height: 40%;
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 20px;
+    background-color: rgba(132, 205, 90, .07);
 }
 
 
