--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -278,6 +278,72 @@ div.circle span {
     background-color: rgba(132, 205, 90, .07);
 }
 
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+.modal-content ul {
+    margin: 80px auto;
+     text-align: center;
+
+}
+.modal-content ul li {
+    border: #b3aca7 3px solid;
+    text-align: center;
+    padding: 20px;
+    list-style-type: none;
+    display: inline;
+
+}
+.modal-content ul li:hover {
+    background-color: #D9D8D8;
+}
+.modal-content h1 {
+    display: inline-block;
+    text-align: center;
+    margin: 0 auto;
+    margin-left: 10px;
+}
+
+@keyframes animatetop {
+    from {top: -300px; opacity: 0}
+    to {top: 0; opacity: 1}
+}
+
 
 
 
